# ClimatePlotter

./: ClimatePlotter3.py  ClimatePlotter3.spec  Climate_Fresk_Input_Template.xlsx  README.md  Views.xlsx  pyproject.toml  requirements.txt
Excel_Input/backup/: Aachen1.xlsx  Bayern1.xlsx  HKA1.xlsx
Plotter_Output/: ClimatePlotter.xlsx
