[tool.poetry]
name = "climateplotter"
version = "0.1.2"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
geopy = "^2.4.1"
pandas = "^2.2.2"
pyside6 = "^6.7.2"
basemap = "^1.4.1"
openpyxl = "^3.1.5"
basemap-data-hires = "^1.3.2"
owslib = "^0.31.0"
geocoder = "^1.38.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
